<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="#020202"

    android:visibility="visible">

    <!--tools:context="com.example.user.Splash.RegisterActivity"-->



    <!--tools:context="com.example.user.SplashActivity.RegisterActivity"-->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        tools:ignore="UselessParent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1.94"
            android:contentDescription="@string/logo_picture"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:scaleType="fitXY"

            app:srcCompat="@drawable/head"

            tools:ignore="ContentDescription" />


        <EditText
            android:id="@+id/etName"
            style="@android:style/Widget.DeviceDefault.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"
            android:ems="10"
            android:fadingEdge="vertical"
            android:hint="@string/first"
            android:inputType="textPersonName"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bRegister"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="2dp"
            android:onClick="Next"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:text="@string/register"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:text="WELCOME TO BETTER AUDIO" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:ems="10"
            android:inputType="textMultiLine"
            android:paddingBottom="5dp"
            android:paddingTop="2dp"
            android:text="@string/consent"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            tools:text="I accept AudioAccousticAssistant's Terms and Conditions and informed consent" />



    </LinearLayout>

</RelativeLayout>
